--- a/src/css/topList.css
+++ b/src/css/topList.css
@@ -5,11 +5,11 @@
 .header {
     height: 80px;
     background-color: rgb(21, 30, 40);
+    .navbar-nav>li>.dropdown-menu {
+        background-color: rgb(21, 30, 40);
+    }
 }
 
-.navbar-nav>li>.dropdown-menu {
-    background-color: rgb(21, 30, 40);
-}
 
 /* title */
 
@@ -27,13 +27,52 @@
     }
 }
 
+/* aso100-nav-select { */
+.nav-select {
+    margin: 9px 0 16px;
+    .navbar-nav {
+        float: left;
+        margin: 0;
+        .dropdown {
+            position: relative;
+            padding-top: 23px;
+            margin-left: 15px;
+        }
+        & > li > a {
+            position: relative;
+            bottom: 1px;
+            font-size: 12px;
+            color: #333333;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 6px 12px;
+            border-radius: 3px;
+        }
 
-.app-kind {
-    position: relative;
-    padding-top: 23px;
-    width: 233px;
-    margin-top: 10px;
-    label {
+        & > li > .dropdown-menu {
+            margin-top: 7px;
+            border-radius: 5px;
+            min-width: 100px;
+            background-color: #151e28;
+                &>.glyphicon {
+                    position: absolute;
+                    top: -10px;
+                    left: 12px;
+                }
+                &>.cascade {
+                    position: relative;
+                }
+                &>li>a .glyphicon-right {
+                    position: absolute;
+                    top: 7px;
+                    right: 10px;
+                    width: 7px;
+                    height: 10px;
+                    font-size: 12px;
+                }
+        }
+    }
+    .navbar-brand {
         position: absolute;
         top: 0;
         font-size: 12px;
@@ -41,9 +80,41 @@
         color: #666666;
         padding: 5px;
         height: initial;
+        float: left;
     }
 }
 
+
+ .dropdown-menu>li>a{
+     display: block;
+     padding: 3px 20px;
+     clear: both;
+     font-weight: 400;
+     line-height: 1.42857143;
+     color: #fff;
+     white-space: nowrap;
+     &:hover {
+         color: var(--custom-color);
+         text-decoration: none;
+         background-color: initial;
+     }
+ }
+
+
+.cascade-menu {
+    top: -37px;
+    left: 115px;
+    background-color: #151e28;
+    &>.glyphicon {
+        position: absolute;
+        top: 40px;
+        left: -10px;
+        color: #151e28;
+    }
+    &>li>a {
+        color: #d0d3d8;
+    }
+}
 
 /* card */
 .card {
