--- a/src/css/appList.css
+++ b/src/css/appList.css
@@ -2,11 +2,6 @@
     --custom-color: rgb(243, 187, 30);
 }
 
-/* header */
-.header {
-    height: 80px;
-    background-color: rgb(21, 30, 40);
-}
 
 .navbar-nav>li>.dropdown-menu {
     background-color: rgb(21, 30, 40);
@@ -52,13 +47,17 @@
 
 /* card */
 .card {
-    margin: 2rem 0;
-    box-shadow: 1px 1px 5px #666;
+    border: 1px solid #E8E6E6;
+    border-bottom: none;
     padding: 2rem;
     opacity: 0;
     &:hover {
         background-color: #f5f5f5;
     }
+}
+
+.card:last-child {
+    border-bottom: 1px solid #E8E6E6;
 }
 
 .card-img {
