--- a/src/css/base.css
+++ b/src/css/base.css
@@ -14,6 +14,10 @@ ul, li {
     padding: 0;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .opacity0 {
     opacity: 0;
 }
@@ -53,15 +57,10 @@ ul, li {
     color: #666666;
 }
 
-.jumbotron {
-    background-color: transparent;
-    h1 {
-        font-size: 36px;
-        color: #fff;
-    }
-}
 
 .header {
+    height: 80px;
+    background-color: rgb(21, 30, 40);
     position: relative;
     background-position: 50% 50%;
     background-repeat: no-repeat;
@@ -77,12 +76,6 @@ ul, li {
     line-height: 111px;
 }
 
-#footer.fixed {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
-
 
 /**
  *头部导航
@@ -91,10 +84,11 @@ ul, li {
     .navbar {
         transition: all 0.4s;
         font-size: 16px;
-        background-color: transparent;
+        height: 80px;
+        background-color: rgb(21, 30, 40);
     }
 
-    .container-fluid>.navbar-header {
+    .container>.navbar-header {
         margin-right: 0;
         margin-left: 0;
     }
@@ -106,7 +100,6 @@ ul, li {
     }
 
     .navbar-nav {
-        float: left;
         margin: 1em 0;
     }
 
@@ -115,19 +108,20 @@ ul, li {
             display: none;
         }
     }
-    .navbar-nav>li {
-        float: left;
-    }
+
+
 
     .navbar-nav>li>a {
         color: rgb(255, 255, 255);
         transition: all .28s cubic-bezier(.4, 0, .2, 1);
     }
 
+
+
     .navbar-right {
-        float: right!important;
         margin-right: -15px;
     }
+
     .navbar-form {
         margin-top: 25px;
         width: auto;
